portfolio/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: portfolio-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30050
