portfolio/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-backend
  template:
    metadata:
      labels:
        app: portfolio-backend
    spec:
      # Docker Hub se image pull karne ke liye secret
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: 2024dock/portfolio-backend:5de1040
          ports:
            - containerPort: 5000
          # Environment variables from ConfigMap and Secret
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: portfolio-backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30050
