portfolio/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
spec:
  type: NodePort
  selector:
    app: portfolio-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
