portfolio/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      # Secret for Docker Hub private images
      imagePullSecrets:
        - name: regcred
      containers:
        - name: frontend
          image: 2024dock/portfolio-frontend:2.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-service
spec:
  type: NodePort
  selector:
    app: portfolio-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
