portfolio/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
spec:
  tls:
    - hosts:
        - raju.local
      secretName: portfolio-tls
  rules:
    - host: raju.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfolio-backend-service
                port:
                  number: 5000

          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: portfolio-backend-service
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-frontend-service
                port:
                  number: 80
